--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -15,43 +15,53 @@
         android:textSize="30dp" />
 
 
-            <TextView
-                android:id="@+id/tw1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Soil Type:"
-                android:layout_below="@id/textView"
-                android:textSize="25dp" />
+    <TextView
+        android:id="@+id/tw1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView"
+        android:layout_marginTop="41dp"
+        android:text="Soil Type:"
+        android:layout_marginLeft="20dp"
+        android:textSize="25dp" />
 
-            <TextView
-                android:id="@+id/tw2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tw1"
-                android:text="Soil Type:"
-                android:textSize="25dp" />
+    <TextView
+        android:id="@+id/tw2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tw1"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="38dp"
+        android:text="Soil Type:"
+        android:textSize="25dp" />
 
-            <TextView
-                android:id="@+id/tw3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Soil Type:"
-                android:layout_below="@id/tw2"
-                android:textSize="25dp" />
+    <TextView
+        android:id="@+id/tw3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tw2"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="39dp"
+        android:text="Soil Type:"
+        android:textSize="25dp" />
 
-            <TextView
-                android:id="@+id/tw4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Soil Type:"
-                android:layout_below="@id/tw3"
-                android:textSize="25dp" />
+    <TextView
+        android:id="@+id/tw4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tw3"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="37dp"
+        android:text="Soil Type:"
+        android:textSize="25dp" />
 
     <TextView
         android:id="@+id/tw5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tw4"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="36dp"
         android:text="Soil Type:"
         android:textSize="25dp" />
 </RelativeLayout>
