--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -1,8 +1,11 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/ess_bg"
     tools:context=".ThirdActivity">
 
     <TextView
@@ -10,39 +13,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginLeft="40dp"
-        android:text="I need to be designed:)"
-        android:textSize="30dp" />
-
+        android:layout_marginLeft="50dp"
+        android:text="Plant name"
+        android:fontFamily="sans-serif-black"
+        android:textSize="30dp"
+        android:textColor="#000000"
+        />
 
     <TextView
         android:id="@+id/tw1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView"
-        android:layout_marginTop="41dp"
+        android:layout_marginLeft="125dp"
+        android:layout_marginTop="103dp"
         android:text="Soil Type:"
-        android:layout_marginLeft="20dp"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        android:textColor="#000000"/>
 
     <TextView
         android:id="@+id/tw2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tw1"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="38dp"
+        android:layout_marginLeft="125dp"
+        android:layout_marginTop="49dp"
         android:text="Soil Type:"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        android:textColor="#000000"/>
 
     <TextView
         android:id="@+id/tw3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tw2"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginLeft="125dp"
+        android:layout_marginTop="50dp"
         android:text="Soil Type:"
+        android:textColor="#000000"
         android:textSize="25dp" />
 
     <TextView
@@ -50,18 +58,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tw3"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginLeft="125dp"
+        android:layout_marginTop="60dp"
+        android:background="@color/white"
         android:text="Soil Type:"
+        android:textColor="#000000"
         android:textSize="25dp" />
 
-    <TextView
-        android:id="@+id/tw5"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/button24"
+        android:layout_width="252dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tw4"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="36dp"
-        android:text="Soil Type:"
-        android:textSize="25dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="115dp"
+        android:layout_marginBottom="100dp"
+        android:background="@drawable/round_btn"
+        android:text="Check Health Status"
+        />
+
 </RelativeLayout>
+
